# overbot-ep

./: .editorconfig  .gitignore  Cargo.toml  README.md
.run/: Build - nightly.run.xml  Build - stable.run.xml  Run - nightly.run.xml  Run - stable.run.xml
assets/web/: package-lock.json  package.json  webpack.config.js
assets/web/src/: index.css  index.html  index.js
src/: accounts.rs  dash_type_map.rs  database.rs  main.rs  system.rs  tui.rs  web.rs
src/logger/: cache_appender.rs  conditional_append_appender.rs  conditional_map.rs  launch_roll_file_appender.rs  mod.rs
src/system_tasks/: daemon.rs  irc.rs  mod.rs  postgres.rs  web_ui_rocket.rs
src/system_tasks/tui/: mod.rs
src/system_tasks/tui/views/: mod.rs
src/tui/: mod.rs
src/tui/views/: log_view.rs
src/web/: auth.rs  macros.rs  mod.rs  static_files.rs
