[package]
name = "overbot"
description = "Event processing bot pipeline"
version = "0.1.0"
authors = ["OvermindDL1 <overminddl1@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
argon2 = "0.2"
chrono = "0.4"
crossbeam = "0.8"
cursive = { version = "0.16.3", default-features = false, features = ["crossterm-backend"] }
dashmap = "4"
lazy_static = "1"
log4rs = "1"
parking_lot = "0.11"
pg-embed = "0.3"
rand = "0.8"
rocket = { version = "0.5.0-dev", git = "https://github.com/SergioBenitez/Rocket.git", features = ["secrets"] } # Change rocket to just `0.5` when it's released
ron = "0.6"
serde = { version = "1", features=["derive"] }
serde-value = "0.7"
sha2 = "0.9"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "tls", "chrono"] }
structopt = "0.3"
thiserror = "1"
tokio = { version = "1.6.1", features = ["full"] }
tracing = { version = "0.1", features = ["attributes", "log", "log-always"] }
typetag = "0.1"
uuid = "0.8"
